--- a/utils/clinics_wrapped_geocoded.json
+++ b/utils/clinics_wrapped_geocoded.json
@@ -1,38 +1,15 @@
 {
-  "county": "臺南市",
-  "total": 52,
+  "county": "高雄市",
+  "total": 85,
   "rows": [
     {
-      "county": "臺南市",
-      "org_name": "真心診所",
-      "org_url": "http://www.heartfeltclinic.com",
-      "phone": "06-3036002",
-      "address": "臺南市永康區東橋十街118號2樓",
-      "map_url": "https://www.google.com.tw/maps/place/臺南市永康區東橋十街118號2樓",
-      "pay_detail": "掛號費250元",
-      "this_week": 3,
-      "next_week": 3,
-      "next_2_week": 0,
-      "next_3_week": 0,
-      "in_4_weeks": 6,
-      "edit_date": "2025/09/01",
-      "teleconsultation": true,
-      "has_quota": true,
-      "lat": 23.0224016,
-      "lng": 120.2333216,
-      "note": "No result",
-      "confidence": 10,
-      "formatted": "臺灣, 710, 臺南市 東橋里 東橋十街 118號",
-      "source": "opencage"
-    },
-    {
-      "county": "臺南市",
-      "org_name": "林俞仲身心精神科診所",
-      "org_url": "linpsyclinic99@gmail.com",
-      "phone": "06-3036006",
-      "address": "7臺南市永康區中山南路31號",
-      "map_url": "https://www.google.com.tw/maps/place/臺南市永康區中山南路31號",
-      "pay_detail": "行政處理費200元",
+      "county": "高雄市",
+      "org_name": "溫島心理治療所",
+      "org_url": "https://www.facebook.com/wondermind515",
+      "phone": "(07)963-8515",
+      "address": "高雄市前鎮區瑞和街六號",
+      "map_url": "https://www.google.com.tw/maps/place/高雄市前鎮區瑞和街6號",
+      "pay_detail": "掛號費100元",
       "this_week": 0,
       "next_week": 0,
       "next_2_week": 0,
@@ -41,35 +18,9 @@
       "edit_date": "尚未更新",
       "teleconsultation": false,
       "has_quota": false,
-      "lat": 23.0237565,
-      "lng": 120.222947,
-      "note": "No result",
-      "confidence": 10,
-      "formatted": "臺灣, 710, 臺南市 尚頂里 南台街54巷18弄 7",
-      "source": "opencage"
-    },
-    {
-      "county": "臺南市",
-      "org_name": "快樂心寧身心診所",
-      "org_url": "FB: 快樂心寧診所-台南永康",
-      "phone": "06-273-8666",
-      "address": "臺南市永康區永大路二段187號",
-      "map_url": "https://www.google.com.tw/maps/place/台南市永康區永大路二段187號",
-      "pay_detail": "初診病人需看診(掛號費150元)",
-      "this_week": 0,
-      "next_week": 0,
-      "next_2_week": 0,
-      "next_3_week": 0,
-      "in_4_weeks": 0,
-      "edit_date": "尚未更新",
-      "teleconsultation": false,
-      "has_quota": false,
-      "lat": 23.0072125,
-      "lng": 120.2617292,
-      "note": "No result",
-      "confidence": 10,
-      "formatted": "臺灣, 710, 臺南市 西灣里 永大路二段 187號",
-      "source": "opencage"
+      "lat": null,
+      "lng": null,
+      "note": "No result"
     }
   ]
 }
