--- a/utils/clinics_wrapped.json
+++ b/utils/clinics_wrapped.json
@@ -1,35 +1,15 @@
 {
-  "county": "臺南市",
-  "total": 52,
+  "county": "高雄市",
+  "total": 85,
   "rows": [
     {
-      "county": "臺南市",
-      "org_name": "真心診所",
-      "org_url": "http://www.heartfeltclinic.com",
-      "phone": "06-3036002",
-      "address": "臺南市永康區東橋十街118號2樓",
-      "map_url": "https://www.google.com.tw/maps/place/臺南市永康區東橋十街118號2樓",
-      "pay_detail": "掛號費250元",
-      "this_week": 3,
-      "next_week": 3,
-      "next_2_week": 0,
-      "next_3_week": 0,
-      "in_4_weeks": 6,
-      "edit_date": "2025/09/01",
-      "teleconsultation": true,
-      "has_quota": true,
-      "lat": null,
-      "lng": null,
-      "note": "No result"
-    },
-    {
-      "county": "臺南市",
-      "org_name": "林俞仲身心精神科診所",
-      "org_url": "linpsyclinic99@gmail.com",
-      "phone": "06-3036006",
-      "address": "7臺南市永康區中山南路31號",
-      "map_url": "https://www.google.com.tw/maps/place/臺南市永康區中山南路31號",
-      "pay_detail": "行政處理費200元",
+      "county": "高雄市",
+      "org_name": "溫島心理治療所",
+      "org_url": "https://www.facebook.com/wondermind515",
+      "phone": "(07)963-8515",
+      "address": "高雄市前鎮區瑞和街六號",
+      "map_url": "https://www.google.com.tw/maps/place/高雄市前鎮區瑞和街6號",
+      "pay_detail": "掛號費100元",
       "this_week": 0,
       "next_week": 0,
       "next_2_week": 0,
@@ -37,30 +17,7 @@
       "in_4_weeks": 0,
       "edit_date": "尚未更新",
       "teleconsultation": false,
-      "has_quota": false,
-      "lat": null,
-      "lng": null,
-      "note": "No result"
-    },
-    {
-      "county": "臺南市",
-      "org_name": "快樂心寧身心診所",
-      "org_url": "FB: 快樂心寧診所-台南永康",
-      "phone": "06-273-8666",
-      "address": "臺南市永康區永大路二段187號",
-      "map_url": "https://www.google.com.tw/maps/place/台南市永康區永大路二段187號",
-      "pay_detail": "初診病人需看診(掛號費150元)",
-      "this_week": 0,
-      "next_week": 0,
-      "next_2_week": 0,
-      "next_3_week": 0,
-      "in_4_weeks": 0,
-      "edit_date": "尚未更新",
-      "teleconsultation": false,
-      "has_quota": false,
-      "lat": 23.0072334,
-      "lng": 120.2591596,
-      "note": "No result"
+      "has_quota": false
     }
   ]
 }
