--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .env
 ./node_mudules
+./geocoding
 index copy 2.js
 index copy 3.js
 index copy 4.js
 index copy 5.js
 index copy.js
+
+index_taoyuan.js
