--- a/.github/workflows/test-taoyuan.yml
+++ b/.github/workflows/test-taoyuan.yml
@@ -2,9 +2,8 @@ name: Try Taoyuan Once
 
 on:
   workflow_dispatch: {}
-  # 你要測排程再打開
   # schedule:
-  #   - cron: "15 2 */3 * *"   # 每 3 天的 02:15 UTC（台北 10:15）
+  #   - cron: "15 2 */3 * *"
 
 concurrency:
   group: try-taoyuan
@@ -33,27 +32,34 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      # 👇 在這裡加一個 debug step
+      - name: Print versions inside container
+        run: |
+          echo "=== Node & Playwright versions in container ==="
+          docker run --rm local/clinics-crawler:latest node -v
+          docker run --rm local/clinics-crawler:latest npx playwright --version
+          echo "============================================="
+
       - name: Prepare folders
         run: mkdir -p out data public
 
       - name: Run crawler (Taoyuan only)
         env:
           CI: "1"
-          TZ: "Asia/Taipei"
-          COUNTY_VALUE: "9"                    # 桃園（你可改）
-          OPENCAGE_API_KEY: ${{ secrets.OPENCAGE_API_KEY }} # 需要就放，沒用到可拿掉
+          COUNTY_VALUE: "9"
           NOMINATIM_USER_AGENT: "counseling-map-bot/1.0 (CI)"
         run: |
           set -euo pipefail
+          echo "🚀 Starting crawler for Taoyuan..."
           docker run --rm --platform=linux/amd64 \
             --shm-size=1g --ipc=host \
-            -e CI -e TZ -e COUNTY_VALUE \
-            -e OPENCAGE_API_KEY -e NOMINATIM_USER_AGENT \
+            -e CI -e COUNTY_VALUE -e NOMINATIM_USER_AGENT \
             -v "$PWD/public":/app/public \
             -v "$PWD/data":/app/data \
             -v "$PWD/out":/app/out \
             local/clinics-crawler:latest \
             bash -lc 'node src/index.js'
+          echo "✅ Crawler finished successfully. Output saved in ./out/"
 
       - name: Upload artifact (out folder)
         uses: actions/upload-artifact@v4
